TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote_Item__c/Tax_Quote_Item__c.object-meta.xml
<CustomObject>
    <label>Tax Quote Item</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Tax Quote Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>