TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote_Item__c/fields/Sales_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Item__c</fullName>
    <label>Sales Item</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>