TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote_Item__c/fields/Tax_Quote__c.field-meta.xml
<CustomField>
    <fullName>Tax_Quote__c</fullName>
    <label>Tax Quote</label>
    <referenceTo>Tax_Quote__c</referenceTo>
    <relationshipLabel>Tax Quote Items</relationshipLabel>
    <relationshipName>Tax_Quote_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>