TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote_Item__c/recordTypes/Tax_Quote_Item.recordType-meta.xml
<RecordType>
    <fullName>Tax_Quote_Item</fullName>
    <active>true</active>
    <label>Tax Quote Item</label>
</RecordType>